# AP2030-UNS

./: .dockerignore  .env.example  .env.exampleOffice  .gitattributes  .gitignore  .gitmodules  CONFIGURATION.md  Install instructions.md  LICENSE  MQTT_classes.py  NETWORK_ARCHITECTURE.md  PMCConfig.xml  README.md  UNS-compose.yml  UNS_data_backup.sql  _config  connection.schema.json  db_utils.yml  docker-compose.nodotenv.yml  docker-compose.yml  dockerfile  fillingProxy.py  index.md  jsonatatransformer.json  labServer-compose.yml  moveToPosition.schema.json  mqtt_client.py  mqttconsumer.json  pmSchemas.py  pmcProxy.py  production_run_backup  readme.md  response_state.schema.json  routes.json  uns-edge-compose.yml  uns-server-compose.yml
BT_Controller/: CMakeLists.txt  dockerfile
BT_Controller/config/: controller_config.yaml  controller_proj.btproj  tree.xml
BT_Controller/config/bt_description/: bt_recording.btlog  controller_proj.btproj  loading.xml  stoppering.xml  tree.xml  tree_nodes_model.xml  unloading.xml
BT_Controller/include/: BehaviorTreeController.h  utils.h
BT_Controller/include/aas/: aas_client.h  aas_client_provider.h  aas_interface_cache.h  aas_snapshot.h  transformation_resolver.h
BT_Controller/include/bt/: bt_log.h  bt_runtime_validator.h  execution_refs.h  mqtt_action_node.h  mqtt_async_sub_node.h  mqtt_decorator.h  mqtt_sync_action_node.h  mqtt_sync_condition_node.h  mqtt_sync_sub_node.h  register_all_nodes.h  symbolic_state.h
BT_Controller/include/bt/CustomNodes/: generic_condition_node.h  move_shuttle_to_position.h  omron_arcl_request_node.h  station_execute_node.h  station_unregister_node.h
BT_Controller/include/bt/actions/: command_execute_node.h  configuration_node.h  execute_action_node.h  generic_action_node.h  move_shuttle_to_position.h  move_to_position.h  omron_arcl_request_node.h  pop_element_node.h  refill_node.h  retrieve_aas_properties_node.h  station_complete_node.h  station_execute_node.h  station_register_node.h  (+1 more)
BT_Controller/include/mqtt/: mqtt_client.h  mqtt_pub_base.h  mqtt_sub_base.h  node_message_distributor.h  utils.h
BT_Controller/src/: BehaviorTreeController.cpp  bt_controller.cpp  utils.cpp
BT_Controller/src/aas/: aas_client.cpp  aas_interface_cache.cpp  aas_snapshot.cpp  transformation_resolver.cpp
BT_Controller/src/bt/: bt_log.cpp  bt_runtime_validator.cpp  execution_refs.cpp  mqtt_action_node.cpp  mqtt_async_sub_node.cpp  mqtt_condition_node.cpp  mqtt_decorator.cpp  mqtt_sync_action_node.cpp  mqtt_sync_condition_node.cpp  symbolic_state.cpp
BT_Controller/src/mqtt/: mqtt_client.cpp  mqtt_pub_base.cpp  mqtt_sub_base.cpp  node_message_distributor.cpp  utils.cpp
BT_Controller/tests/: test_action_transformation.cpp  test_execution_refs.cpp  test_symbolic_state.cpp
cpp_pub/src/: CMakeLists.txt  MQTT_classes.cpp  async_publish.cpp  bt_controller.cpp  bt_tree.xml  common_constants.cpp  generate_model_xml.cpp  mqtt_asynchronous_node.cpp
cpp_pub/src/bt/: mqtt_action_node.cpp  mqtt_condition_node.cpp  tree_tick_requester.cpp
cpp_pub/src/include/: common_constants.h
cpp_pub/src/mqtt/: callbacks.cpp  mqtttopic.cpp  proxy.cpp  subscription_manager.cpp  utils.cpp
ppr-ontology/: README.md  pyproject.toml
ppr-ontology/.github/instructions/: CSSxCreate.instructions.md
ppr-ontology/aas_configs/: imaDispensing.yaml  imaLoadingSystem.yaml
ppr-ontology/api/: main.py  models.py  requirements-api.txt
ppr-ontology/api/context/: 00-preamble.md  shacl-rules.md  valid-example.json
ppr-ontology/api/routers/: context.py  generate.py  generate_aas.py  validate.py
ppr-ontology/deprecated/: convert_resourceaas_json_to_yaml.py  generate_resourceaas_cases.py  helper-docs.md
ppr-ontology/deprecated/api/: guidance.py  pipeline.py
ppr-ontology/deprecated/generation_2/: __init__.py
ppr-ontology/generation/: AAS_builder.py  __init__.py  __main__.py  config.py  context_loader.py  json_description_generation.py  llm_client.py  pdf_extractor.py  pipeline.py  profile_structure.py  prompt_builder.py  prompts.yaml  rag_loader.py  requirements.txt  run.py  text_parsing.py  validator.py
ppr-ontology/generation/AAS_generation/: __init__.py  aas_generation.py  pipeline.py
ppr-ontology/generation/RAG/: Pharma_Dispensing_Module_AAS_valid_full_model.json
ppr-ontology/generation/output/: aas_issues.json  aas_output.json  aas_output.profile.json
ppr-ontology/ontology/: CSSx.ttl  catalog-v001.xml
ppr-ontology/ontology/modules/: cssx-aas-validation.ttl  cssx-ai-planning.ttl  cssx-bom.ttl  cssx-capabilities.ttl  cssx-nameplate.ttl  cssx-operational-data.ttl  cssx-parameters.ttl  cssx-predicates.ttl  cssx-resource-hierarchy.ttl  cssx-resource-interface.ttl  cssx-skills.ttl  cssx-technical-data.ttl
ppr-ontology/ontology/owl2shacl/: owl2sh-closed.ttl  owl2sh-open.ttl  owl2sh-semi-closed.ttl
ppr-ontology/shacl/: resourceaas-bom.shacl.ttl  resourceaas-core.shacl.ttl  resourceaas-dependencies.shacl.ttl  resourceaas-semantics.shacl.ttl  shapes.shacl.ttl
ppr-ontology/shacl/manual/: resourceaas-sparql-rules.shacl.ttl
ppr-ontology/tools/: __init__.py  generate_shapes_from_ontology.py  mock_resourceaas_to_rdf.py  run_resourceaas_test_matrix.py  run_resourceaas_validation.py  validate_with_basyx.py
ppr-ontology/ui/: package-lock.json  package.json  vite.config.ts  web-ui-handoff.md
ppr-ontology/ui/src/: App.css  App.tsx  index.css
ppr-ontology/validation-output/: tmp.generated.ttl  tmp.jsondesc.test.generated.ttl  tmp.jsondesc.test.report.ttl  tmp.report.ttl  yaml-mode-example.generated.ttl  yaml-mode-example.report.ttl  yamlmode-test.generated.ttl  yamlmode-test.report.ttl
ppr-ontology/validation/cases/: broken_capability_skill_link.json  broken_skill_interface_link.json  duplicate_nameplate_submodel.json  empty_hierarchical_bom_entries.json  missing_aid.json  missing_capabilities.json  missing_capability_semanticid.json  missing_hierarchical_structures.json  missing_nameplate.json  missing_skill_semanticid.json  missing_skills.json  valid_resourceaas.generator-profile.yaml  valid_resourceaas.json  valid_resourceaas.yaml
(+893 files in other folders)
